# asset-index

./: .gitignore  CHANGELOG.md  CLAUDE.md  MANIFEST.in  README.md  README_CN.md  pyproject.toml
docs/: design-rationale.md  usage.md
scripts/: publish.sh
skills/asset-index/: SKILL.md
skills/asset-index/evals/: trigger-tests.md
skills/asset-index/references/: schema.md
src/asset_index/: __init__.py  checker.py  cli.py  models.py  store.py
